# EzGraph

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  configure  configure.ac  mmlp.README
EzGraph/: EzGraph.c  EzGraph.h  Makefile.am  Makefile.in  audio.c  audio.h  code.c  config.h.in  connect.c  mmlp.c  mmlp.h  play.c  taiko1.h  token.c
html/: Intro.in  KeyTable.in  MML.in  Makefile.am  Makefile.in  TutBasic.in  TutComp.in  TutDoubleBuf.in  TutEvent.in  TutKey.in  TutNet.in  TutXPM.in  Tutorial.in  make_html.pl  reference.txt  rgb.txt  standard.css
html/DoubleBuffering/: mk
html/code/: DblBuf1.c  DblBuf2.c  car.xpm  chat_client.c  chat_server.c  tutorial1.c  tutorial2.c  tutorial3.c  tutorial4.c
sample/: EzSample1.c  EzSample2.c  EzSample3.c  EzSample4.c  Makefile.am  Makefile.in
tools/: Makefile.am  Makefile.in  ezcc.in
