bin_PROGRAMS = EzSample1 EzSample2 EzSample3 EzSample4
EzSample1_SOURCES = EzSample1.c EzGraph.h
EzSample2_SOURCES = EzSample2.c EzGraph.h
EzSample3_SOURCES = EzSample3.c EzGraph.h
EzSample4_SOURCES = EzSample4.c EzGraph.h
EzSample1_LDADD = $(top_builddir)/EzGraph/.libs/libEzGraph.la -lm
EzSample2_LDADD = $(top_builddir)/EzGraph/.libs/libEzGraph.la -lm
EzSample3_LDADD = $(top_builddir)/EzGraph/.libs/libEzGraph.la -lm
EzSample4_LDADD = $(top_builddir)/EzGraph/.libs/libEzGraph.la -lm

AM_CPPFLAGS = -I$(top_srcdir)/EzGraph
